correções no get Todas

--- a/C#/API/AtividadeFinal_Dados/AtividadeFinal_Dados/AtividadeFinal_Dados.csproj
+++ b/C#/API/AtividadeFinal_Dados/AtividadeFinal_Dados/AtividadeFinal_Dados.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MySql.Data" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
 </Project>
